<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Main">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="128sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <Button
        android:id="@+id/button_Continue"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onClick_ContinueGame"
        android:text="@string/button_Continue"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/buttonStartNewGame"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onClick_NewGame"
        android:text="@string/button_NewGame"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Continue" />

    <Button
        android:id="@+id/buttonAddNewBoard"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onClick_AddBoard"
        android:text="@string/button_AddBoard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonStartNewGame" />

    <Button
        android:id="@+id/buttonShowInstructions"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onClick_Instructions"
        android:text="@string/info_HowToPlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddNewBoard" />

    <Button
        android:id="@+id/button_Settings"
        style="@android:style/Widget.Material.Button.Borderless.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onClick_Settings"
        android:text="@string/button_Settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonShowInstructions" />



</androidx.constraintlayout.widget.ConstraintLayout>