<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/layout_NewBoard"
        android:layout_width="375dp"
        android:layout_height="375dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.611"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:id="@+id/group0"
                android:name="Project.Sudoku.Fragments.CellGroup"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:tag="0" />

            <fragment
                android:id="@+id/group1"
                android:name="Project.Sudoku.Fragments.CellGroup"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:tag="1" />

            <fragment
                android:id="@+id/group2"
                android:name="Project.Sudoku.Fragments.CellGroup"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:tag="2" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment
                android:id="@+id/group3"
                android:name="Project.Sudoku.Fragments.CellGroup"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:tag="3" />

            <fragment
                android:id="@+id/group4"
                android:name="Project.Sudoku.Fragments.CellGroup"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:tag="4" />

            <fragment
                android:id="@+id/group5"
                android:name="Project.Sudoku.Fragments.CellGroup"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:tag="5" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="117dp">

            <fragment
                android:id="@+id/group6"
                android:name="Project.Sudoku.Fragments.CellGroup"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:tag="6" />

            <fragment
                android:id="@+id/group7"
                android:name="Project.Sudoku.Fragments.CellGroup"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:tag="7" />

            <fragment
                android:id="@+id/group8"
                android:name="Project.Sudoku.Fragments.CellGroup"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                android:tag="8" />
        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/layout_SelectNumber"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_NewBoard">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="185dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:fontFamily="sans-serif-light"
                android:gravity="end|center_vertical"
                android:text="@string/instruction_CellValue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="182dp"
                android:layout_height="match_parent"
                android:gravity="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_Clear"
                android:layout_height="wrap_content"
                android:onClick="onClick_Clear"
                android:text="@string/button_Clear" />

            <Button
                android:id="@+id/button_Confirm"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_height="wrap_content"
                android:onClick="onClick_Confirm"
                android:text="@string/button_Confirm" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_Difficulty"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_SelectNumber"
        app:layout_constraintVertical_bias="0.032" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/radio_Easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick_RadioButton"
            android:text="@string/radio_Easy" />

        <RadioButton
            android:id="@+id/radio_Normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick_RadioButton"
            android:text="@string/radio_Normal" />

        <RadioButton
            android:id="@+id/radio_Hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick_RadioButton"
            android:text="@string/radio_Hard" />
    </RadioGroup>

    <Button
        android:id="@+id/button_Save"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onClick_Save"
        android:text="@string/button_Save"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.947" />

    <Button
        android:id="@+id/button_Return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onClick_Return"
        android:text="@string/button_Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>